@@ -1,1 +1,30 @@
 # Stick-Hero-Game
+
+Overview
+Stick Hero is a simple JavaFX game where the player controls a character who tries to cross platforms by extending a stick. The goal is to land the stick on the next platform without falling.
+
+Features
+Player control using the 'E' key to extend the stick.
+Dynamic platform generation to create a challenging environment.
+Getting Started
+Prerequisites
+Java installed on your machine.
+JavaFX library.
+Installation
+Clone the repository:
+
+bash
+Copy code
+git clone https://github.com/your-username/stick-hero-game.git
+Compile and run the game:
+
+bash
+Copy code
+cd stick-hero-game
+javac -cp path/to/javafx-sdk-17/lib/*:. com/example/pr_fx/Main.java
+java --module-path path/to/javafx-sdk-17/lib --add-modules javafx.controls,javafx.fxml com.example.pr_fx.Main
+How to Play
+Press the 'E' key to extend the stick.
+Release the 'E' key to drop the stick and land on the next platform.
+Contributing
+If you'd like to contribute to Stick Hero, please fork the repository and create a pull request. Issues and feature requests are also welcome!
